# LocalFlow

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
localflow/: __init__.py  __main__.py  app.py  config.py  pipeline.py
localflow/core/: injector.py  recorder.py  refiner.py  transcriber.py
localflow/mcp_servers/: fitness.py  random_user.py  todo.py
localflow/tools/: __init__.py  base.py  datetime_tool.py  mcp_client.py
localflow/ui/: popup.py  styles.py  tray.py  waveform.py
